[#9945] add apdex score for serverList and filteredServerMap